# elm2nix

./: .gitignore  .travis.yml  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  default.nix  devenv.nix  elm2nix.cabal  nixpkgs-src.json  nixpkgs.nix  shell.nix  stack.yaml
.github/workflows/: release.yml  test.yml
data/: default.nix
elm2nix/: Main.hs
scripts/: tests.sh
src/: Elm2Nix.hs  Lib.hs  Prefetch.hs
src/Elm2Nix/: ElmJson.hs  FixedOutput.hs  PackagesSnapshot.hs  VersionConstraints.hs
test/: .gitignore
test/lib/: default.nix  elm-srcs.nix  elm.json
test/lib/src/: Main.elm
test/source-directories/a-src/: Main.elm  default.nix  elm-srcs.nix  elm.json
test/source-directories/b-src/src/: Text.elm
