name:           elm2nix
version: 0.4.0
synopsis:       Turn your Elm project into buildable Nix project
description:    Please see the README on Github at <https://github.com/domenkozar/elm2nix#readme>
homepage:       https://github.com/domenkozar/elm2nix#readme
bug-reports:    https://github.com/domenkozar/elm2nix/issues
author:         Domen Kozar
maintainer:     domen@dev.si
copyright:      2017-2022 Domen Kozar
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  2.0

extra-source-files:
    CHANGELOG.md
    README.md
    data/default.nix

source-repository head
  type: git
  location: https://github.com/domenkozar/elm2nix

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && < 5
    , aeson
    , async
    , bytestring
    , binary
    , containers
    , here
    , process
    , text
    , transformers
    , unordered-containers
  exposed-modules:
      Elm2Nix
      Elm2Nix.FixedOutput
      Elm2Nix.PackagesSnapshot
  other-modules:
      Elm2Nix.ElmJson
      Paths_elm2nix
  autogen-modules:
      Paths_elm2nix
  default-language: Haskell2010

executable elm2nix
  main-is: Main.hs
  hs-source-dirs:
      elm2nix
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  autogen-modules:
      Paths_elm2nix
  other-modules:
      Paths_elm2nix
  build-depends:
      base >= 4.7 && < 5
    , elm2nix
    , optparse-applicative
    , here
    , ansi-wl-pprint
  default-language: Haskell2010

test-suite elm2nix-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , elm2nix
  default-language: Haskell2010
